--- a/web/themes/crane/scss/elements/_form-elements.scss
+++ b/web/themes/crane/scss/elements/_form-elements.scss
@@ -134,6 +134,9 @@
 .js-form-type-textarea{
 	textarea{
 		@include textInput;
+		&#edit-filters-filter-html-settings-allowed-html{
+			max-width: none;
+		}
 	}
 }
 .text-format-wrapper{
@@ -417,8 +420,11 @@ select:hover,select:focus{
 	}
 }
 
-fieldset{
+fieldset:not(.form-composite){
 	border-color: $formElementBorder;
+	background: $siteBack;
+	box-shadow: 0 2px 4px $metaBorderSoft;
+	border-radius: none;
 	&:hover{
 		box-shadow: inset 0 0 0 1px $formElementBorderHover;
 		border-color: $formElementBorderHover;
