--- a/web/themes/crane/css/crane.css
+++ b/web/themes/crane/css/crane.css
@@ -5398,7 +5398,7 @@ select:hover, select:focus {
   display: none; }
 
 fieldset:not(.form-composite) {
-  border-color: #026cc5;
+  border-color: rgba(35, 35, 35, 0.3);
   background: #ffffff;
   box-shadow: 0 2px 4px rgba(35, 35, 35, 0.1);
   border-radius: none; }
