--- a/web/themes/crane/scss/components/_blocks.scss
+++ b/web/themes/crane/scss/components/_blocks.scss
@@ -3,6 +3,10 @@
 ================== */
 #block-crane-help{
 	padding: $elementSpace 0 0;
+	a.button{
+		margin-left: 10px;
+		margin-right: 10px;
+	}
 }
 
 #block-crane-content{
