--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
@@ -164,13 +164,23 @@ input[type="submit"].button{
 	}
 }//end form item
 
-
 // required items
 .form-required,.js-form-required{
 	position: relative;
 	@include required;
 }
 
+//help
+.webform-element-help{
+	border: 0;
+	background: $link;
+	position: relative;
+	top: -3px;
+	&:hover,&:focus{
+		outline: none;
+		background: $hoverLink;
+	}
+}
 
 //descriptions
 .description{
@@ -179,7 +189,6 @@ input[type="submit"].button{
 input + .description{
 	padding-top: $spaceXs;
 }
-
 
 //fieldsets
 fieldset{
@@ -197,7 +206,6 @@ fieldset{
 		}
 	}
 }//end fieldset
-
 
 
 /* USER LOGIN
@@ -240,3 +248,4 @@ fieldset{
 		margin: 0;
 	}
 }//end user login form
+
