Layout Builder UI

--- a/web/themes/citizen_patterns/components/_patterns/00-base/_00-units.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_00-units.scss
@@ -19,11 +19,12 @@ $onlyMobile: max-width $desk - 1px;
 
 /* SPACING VARIABLES
 ----------------------------- */
-$spaceXs: 1rem;
-$spaceSm: 2rem;
-$spaceMd: 3rem;
-$spaceLg: 4rem;
-$spaceXl: 6rem;
+$spaceXxs: 1rem;
+$spaceXs : 1rem;
+$spaceSm : 2rem;
+$spaceMd : 3rem;
+$spaceLg : 4rem;
+$spaceXl : 6rem;
 
 $siteMarginMobile: 2rem;
 $siteMarginDesk: 6rem;
