--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -3,10 +3,11 @@
 
 /* ADMINS - do not customize per site */
 $gold          : #fcd105;
+$whiteGold     : #fbf9db;
 $fuchsia       : #c028bb;
 $purple        : #8b01e2;
 $green         : #018901;
-$gold          : #fcd105;
+$gold          : #fcdc01;
 $transGrey     : rgba(92,96,98,.92);
 
 
