--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -16,7 +16,7 @@ $red          : #bf0e0e;
 $fuchsia      : #c41294;
 $purple       : #8b01e2;
 $green        : #018901;
-$gold         : #fcd105;
+$gold         : #fcdc01;
 $whiteGold    : #fbf9db;
 $blueGrey     : #dce7f3;
 $blue         : #026cc5;
