--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
@@ -8,17 +8,14 @@
 	border: 2px solid $formElementBorder;
 	border-radius: 0;
 	height: auto;
+	background: $siteBack;
 	&.select2--container--focus{
 		box-shadow: 0 2px 2px rgba(35,35,35,0.3);
 	}
 }
 
-body select,body select:hover,body select:focus{
-	background: none;
-}
-
-/* SELECT STYLING
-------------------- */
+/* SELECT 2
+----------------- */
 //hide optgroup safari bug fix
 optgroup:empty{
 	display: none;
@@ -34,142 +31,139 @@ optgroup:empty{
 	width: 100% !important;
 	max-width: 250px;
 }
-body .select2-container{
-	margin-bottom: 0;
-}
 
-/* SINGLE SELECT 2
------------------ */
-body .select2-container--default{
-	//single filter
-	.select2-selection--single{
-		@include inputSelect;
-		&:hover{
-			box-shadow: inset 0 0 0 1px $formElementBorderHover;
+/* IN BODY AND OFF CANVAS */
+body,#drupal-off-canvas{
+	select{
+		background: none;
+		&:hover,&:focus{
+			background: none;
 		}
-		&:focus{
-			outline: none;
-			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
-		}
-		&[aria-expanded="true"]{
-			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
-			border-color: $formElementBorderFocus;
-		}
-		.select2-selection__choice__remove{
-			position: relative;
-			z-index: 999;
-		}
-		//rendered selection
-		.select2-selection__rendered{
-			padding: 6px 32px 6px 10px;
-			color: $darkGrey;
-			text-align: left;
-		}
-		.select2-selection__arrow{
-			@include triangle(down,12px,16px,$selectArrow);
-			top: 17px;
-			right: 10px;
-			//hide default select2 arrow
-			b{
-				display: none;
+	}
+	.select2-container{
+		margin-bottom: 0;
+	}
+	.select2-container--default{
+
+		/* SELECT 2 SINGLE */
+		.select2-selection--single{
+			@include inputSelect;
+			&:hover{
+				box-shadow: inset 0 0 0 1px $formElementBorderHover;
 			}
-		}
-
-	}//end single
-}
-
-
-/* SELECT 2 MULTI
------------------- */
-body .select2-container--default{
-
-	//multi filter
-	.select2-selection--multiple{
-		@include inputSelect;
-		padding: 3px 0 3px 0;
-		&:hover{
-			box-shadow: inset 0 0 0 1px $formElementBorderHover;
-		}
-		&:focus{
-			outline: none;
-			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
-		}
-		&[aria-expanded="true"]{
-			box-shadow: inset 0 0 0 1px $formElementBorderFocus;
-			border-color: $formElementBorderFocus;
-		}
-		.select2-selection__choice__remove{
-			position: relative;
-			z-index: 999;
-		}
-		//selection input
-		.select2-search--inline{ 
-			position: relative;
-			float: none;
-			padding: 2px 3px;
-			&:after{
-				content: '';
-				display: block;
-				height: 100%;
-				position: absolute;
-				top: 10px;
-				right: 2px;
-				cursor: pointer;
-				@include triangle(down,12px,16px,$selectArrow);
+			&:focus{
+				outline: none;
+				box-shadow: inset 0 0 0 1px $formElementBorderFocus;
 			}
-			input.select2-search__field{
+			&[aria-expanded="true"]{
+				box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+				border-color: $formElementBorderFocus;
+			}
+			.select2-selection__choice__remove{
+				position: relative;
+				z-index: 999;
+			}
+			//rendered selection
+			.select2-selection__rendered{
+				padding: 6px 32px 6px 10px;
 				color: $darkGrey;
-				@include placeholder;
-				&:focus{
-					@include placeholderFocus;
+				text-align: left;
+				background: $siteBack;
+			}
+			.select2-selection__arrow{
+				@include triangle(down,12px,16px,$selectArrow);
+				top: 17px;
+				right: 10px;
+				background: none;
+				//hide default select2 arrow
+				b{
+					display: none;
 				}
 			}
-		}
+		}//end single
 
-		//selected item
-		.select2-selection__choice{
-			border-radius: 0;
-			background-color: $offWhite;
-		}
-	}//end multi
-}
-
-/* SELECT 2 ACTIVE
--------------------- */
-body .select2-container--default{
-	&:focus{
-		outline: none;
-	}
-	//active select2
-	&.select2-container--open,&.select2-container--focus{
-
-		//single
-		.select2-selection--single{
-			.select2-selection__arrow{
-				border-top: 0;
-				border-bottom: 12px solid $selectArrow;
+		/* SELECT 2 MULTI */
+		.select2-selection--multiple{
+			@include inputSelect;
+			padding: 3px 0 3px 0;
+			&:hover{
+				box-shadow: inset 0 0 0 1px $formElementBorderHover;
 			}
-		}
-
-		//multiple
-		.select2-selection--multiple{		
-			border-width: 2px;	
+			&:focus{
+				outline: none;
+				box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+			}
+			&[aria-expanded="true"]{
+				box-shadow: inset 0 0 0 1px $formElementBorderFocus;
+				border-color: $formElementBorderFocus;
+			}
+			.select2-selection__choice__remove{
+				position: relative;
+				z-index: 999;
+			}
+			//selection input
 			.select2-search--inline{ 
+				position: relative;
+				float: none;
+				padding: 2px 3px;
 				&:after{
-					border-top: 0;
-					border-bottom: 12px solid $selectArrow;
+					content: '';
+					display: block;
+					height: 100%;
+					position: absolute;
+					top: 10px;
+					right: 2px;
+					cursor: pointer;
+					@include triangle(down,12px,16px,$selectArrow);
 				}
 				input.select2-search__field{
+					color: $darkGrey;
 					@include placeholder;
 					&:focus{
 						@include placeholderFocus;
 					}
 				}
-			}
-		}
+			}//end search inline
 
-	}//end active
-}
+			//selected item
+			.select2-selection__choice{
+				border-radius: 0;
+				background-color: $offWhite;
+			}
+		}//end multi
+
+
+		/* ACTIVE SELECT 2 */
+		&.select2-container--open,&.select2-container--focus{
+			//single
+			.select2-selection--single{
+				.select2-selection__arrow{
+					border-top: 0;
+					border-bottom: 12px solid $selectArrow;
+				}
+			}//end single
+
+			//multiple
+			.select2-selection--multiple{		
+				border-width: 2px;	
+				.select2-search--inline{ 
+					&:after{
+						border-top: 0;
+						border-bottom: 12px solid $selectArrow;
+					}
+					input.select2-search__field{
+						@include placeholder;
+						&:focus{
+							@include placeholderFocus;
+						}
+					}
+				}
+			}//end multiple
+		}//end active
+
+	}// end select2 default
+}//end body / off canvas
+
 
 
 /* SELECT 2 DROPDOWNS
