--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/02-layout-builder/_layout_builder.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/02-layout-builder/_layout_builder.scss
@@ -1,6 +1,7 @@
-/* ===============
-   layout builder admin theming
-=================== */
+/* ========================
+   LAYOUT BUILDER UI
+========================== */
+
 //hide the builder label and only show it later when in layout builder
 .builder-label{
 	display: none;
@@ -48,26 +49,58 @@
 	}
 }//end layout builder form
 
-//Allow text to wrap down so user can see entire message
-.ui-dialog .ui-dialog-title{
-	white-space: normal;
-}
 
 .layout-builder-discard-changes{
 	max-width: $contentStop;
 	@include auto;
 	.form-actions{
 		padding-top: $spaceSm;
+		@include safeFlex(row,wrap,start,center);
 		.button{
 			margin-right: 1rem;
 			min-width: 140px;
 			&#edit-cancel{
 				@include cautionButton;
+				max-width: 140px;
 			}
 		}
 	}
 }
 
+.is-layout-builder-highlighted{
+	border: none !important;
+	background: $whiteGold;
+}
+
 .layout-builder-revert-overrides{
 	@extend .layout-builder-discard-changes;
 }
+
+/* LAYOUT BLOCK FORMS */
+form.layout-builder-configure-block,form.layout-builder-block-move,form.layout-builder-remove-block,form.layout-builder-remove-section{
+	padding-top: $spaceSm !important;
+	.js-layout-builder-category{
+		.links{
+			margin-top: $spaceXxs;
+		}
+	}
+	body:not(.role-adminstrator) &{
+		.webform-default-data{
+			display: none;
+		}
+		.form-item-settings-redirect{
+			display: none;
+		}
+		.token-dialog{
+			display: none;
+		}
+	}
+	.layout-builder-components-table{
+		margin-bottom: $spaceLg;
+		.layout-builder-components-table__block-label--current{
+			border-left-color: $gold;
+		}
+	}
+}//end layout builder configure/move/remove block
+
+
